ESSArch_PP/frontend/static/frontend/styles/modules/index.scss
/* ... */
.filter-icon {
    cursor: pointer;
    margin: 5px;
    border-style: solid;
    border-color: white;
    border-width: 1.5px;
    &:hover {
        border-color: rgba(102, 102, 102, 0.4);
    }
    &:active {
        border-color: rgba(102, 102, 102, 0.4);
    }
}
.filter-active {
    color: $step-success;
}
.blue-border {
    border-color: rgba(102, 102, 102, 0.4);
}

.header .nav {
    cursor: default;
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
    font-size: 12pt;
    .sliding-middle-out {
        display: inline-block;
        position: relative;
        padding-bottom: 3px;
    }
    .sliding-middle-out:after {
        content: '';
        display: block;
        margin: auto;
        height: 1px;
        width: 0px;
        background: transparent;
    }
    .chosen:hover:after {
        width: 100%;
        height: 1px;
        background: #fff;
    }
    .chosen:after {
        width: 100%;
        height: 1px;
        background: #fff;
    }
}
.nav-item {
    cursor: pointer;
    margin: 0 15px 0 0 !important;
}

.user-settings {
    @include container(10px);
    margin-top: 10px;
    width:50%;
    min-width: 400px;
    .ip-view-type {
        margin-bottom: 10px;
    }
    .column-picker {
        width: 100%;
        display: flex;
        flex-direction: row;
        .buttons {
            display: flex;
            flex-direction: column;
        }
        select {
            width: 150px;
        }
    }
}
.table-container {
    position: relative;
    thead, tbody {
        border: 1px solid $border-color;
    }
}
.appraisal-page {
    margin-top: 10px;
    @include container(10px);
}

.flex-row {
    display: flex;
    flex-direction: row;
    * {
        margin-right: 3px;
    }
}
.list-view {
    @include container(10px);
    display: flex;
    flex-direction: column;
    margin-top: 10px;
    .list-view-table {
        position: relative;
        overflow-x: auto;
        thead, tbody {
            border: 1px solid $border-color;
        }
    }
}
.list-view-buttons {
    display: flex;
    flex-direction: row;
    justify-content: left;
    margin-bottom: 5px;
}
.list-view-buttons .btn {
    margin-left: 10px;
}
.event-view {
    .list-view-table {
        position: relative;
        overflow-x: auto;
        thead, tbody {
            border: 1px solid $border-color;
        }
    }
}
.enter-profile-name {
    padding: 15px;
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    align-items: stretch;
    position: relative;
    width: 100%;
    justify-content: space-between;
}

.object-identifier-value {
    display: inline-block;
}

.generation-indicator, .new-version-indicator {
    margin-left: 5px;
    display: inline-block;
    padding: 3px 5px;
    font-size: 12px;
    color: white;
    border-radius: 5px;
    box-shadow: 0px 1px 0px rgba(0,0,0,.15);
}

.generation-indicator {
    background-color: $gold-leaf;
}

.new-version-indicator {
    background-color: $step-fail;
}

.traceback-copied {
    color: $step-success;
}

.popover {
    word-break: break-all;
}

.drop-zone {
    width: 100%;
    height: 100px;
    border-style: dotted;
    border-color: $border-color;
    text-align: center;
    vertical-align: middle;
    line-height: 100px;
}

.restricted {
    @include container(5px);
    margin-top: 5px;
    padding: 10px;
    .restricted-text {
        color: $step-fail;
    }
    a {
        color: rgb(206, 0, 0);
    }
    display: flex;
    flex-direction: row;
}

.profile-editor {
    @include container(10px);
}

.sa-editor {
    @include container(10px);
    box-shadow: none;
    margin-top: 10px;
    .edit-view {
        .form-control {
            width: 100%;
        }
    }
    .sa-select {
        width: 33%;
    }
    .fa-plus {
        color: $step-success;
    }
}
.import {
    @include container(10px);
    margin-top: 10px;
    width:100%;
    min-width: 400px;
    input {
        width: 33%;
    }
    .alert {
        width: 33%;
        margin-top: 10px;
    }
    .btn-info {
        margin-top: 5px;
    }
}

.data-version-list {
    width: 10%;
    min-width: 50px;
    margin-left: 10px;
    float: right;
}

.profile-name {
    float: left;
}

.sa-table {
    padding: 5px;
    table {
        table-layout: fixed;
        tbody {
            td {
                border: none;
                overflow: hidden;
                text-overflow: ellipsis;
            }
        }
        margin-top: 20px;
        .flex-row {
            select {
                margin-right: 10px;
            }
        }
    }
}

.edit-form {
    table {
        table-layout: fixed;
        .flex-row {
            align-items: center;
            p {
                word-break: normal;
            }
        }
        td {
            overflow: hidden;
            text-overflow: ellipsis;
        }
    }
}

.sa-edit {
    .formly {
        display: flex;
        flex-direction: row;
        flex-wrap: wrap;
        align-items: baseline;
        padding: 5px;
        width: 100%;
    }
}

.read-only {
    font-size:.7em;
}

.prepare-button {
    margin-left: 5px;
}

.empty-step {
    background-color: rgba(244, 66, 66, 0.30);
    text-align: center;
}

.no-select {
    user-select: none;
}

.info-wrapper {
    @include container(10px);
    width: 100%;
    margin-top: 10px;
}

